# Template_project

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
headers/: header.hpp
projects/: CMakeLists.txt
projects/complex/: CMakeLists.txt
projects/complex/include/: header.hpp
projects/complex/src/: header.cpp
projects/simple/: CMakeLists.txt
projects/simple/include/: header.hpp
projects/simple/src/: header.cpp
scripts/: build_project_Win.bat  build_project_ubuntu  open  rebuild
src/: header.cpp
