CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT( complex
	 VERSION 1.0
	 DESCRIPTION "Project sample"
	 LANGUAGES CXX
)

MESSAGE(STATUS "Project: " ${PROJECT_NAME})
MESSAGE(STATUS "Project source dir: " ${PROJECT_SOURCE_DIR})

SET(CMAKE_CXX_STANDARD 17)

ADD_DEFINITIONS(
	-std=c++17
	#-O2
	#-O3
)
#ADD_COMPILE_DEFINITIONS( IMGUI_IMPL_OPENGL_LOADER_GLEW=1 )
#ADD_COMPILE_DEFINITIONS( IMGUI_IMPL_OPENGL_LOADER_GLAD=1 )

ADD_EXECUTABLE(${PROJECT_NAME}
	src/main.cpp
	src/header.cpp

	include/header.hpp

	../../more/TODO.txt
	CMakeLists.txt
)

TARGET_SOURCES(${PROJECT_NAME} PRIVATE
)

TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC
	include
)

if( UNIX )
	TARGET_LINK_LIBRARIES( ${PROJECT_NAME} 
	)
elseif( WIN32 )
	TARGET_LINK_LIBRARIES( ${PROJECT_NAME} 
	)
endif()











